# aneurysm_training_code

./: .gitignore  Aneurysm_Label_list.xlsx  Aneurysm_Pred_list.xlsx  CLAUDE.md  Git分支管理完整指南.md  README.md  change_5fold_splits_final.py  change_5fold_splits_final_location.py  gpu_aneurysm.py  make_normalized_img.py  nii_transforms.py  nnUNet客製化程式碼Git管理問題解決方案.md  pipeline_aneurysm_torch.py  pipline_aneurysm.ipynb  requirements.txt
.memory/: README.md
nnResUNet-classifier/: Show_train_input.ipynb  Show_train_input_FEMH.ipynb  Show_train_input_augmentation.ipynb
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/: LICENSE  pyproject.toml  readme.md
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/: configuration.py  paths.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/ensembling/: ensemble.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/evaluation/: accumulate_cv_results.py  evaluate_predictions.py  find_best_configuration.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/experiment_planning/: plan_and_preprocess_api.py  plan_and_preprocess_entrypoints.py  verify_dataset_integrity.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/imageio/: natural_image_reader_writer.py  nibabel_reader_writer.py  reader_writer_registry.py  readme.md  simpleitk_reader_writer.py  tif_reader_writer.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/inference/: data_iterators.py  examples.py  export_prediction.py  predict_from_raw_data.py  predict_from_raw_data_with_cls.py  readme.md
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/model_sharing/: entry_points.py  model_download.py  model_export.py  model_import.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/postprocessing/: remove_connected_components.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/preprocessing/preprocessors/: default_preprocessor.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/preprocessing/resampling/: default_resampling.py  resample_torch.py  utils.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/run/: load_pretrained_weights.py  run_training.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/training/dataloading/: base_data_loader.py  data_loader_2d.py  data_loader_3d.py  data_loader_3d_with_global_cls.py  nnxnet_dataset.py  utils.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/training/logging/: nnxnet_logger.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/training/loss/: awdice_loss.py  compound_awdice_loss.py  compound_losses.py  dice.py  skeletonize.py  soft_skeleton.py
nnResUNet-location-cls-upsample/RSNA2025_Intracranial-Aneurysm-Detection-master/RSNA2025_Intracranial-Aneurysm-Detection-master/nnXNet/nnxnet/utilities/: collate_outputs.py  dataset_name_id_conversion.py  default_n_proc_DA.py  file_path_utilities.py  get_network_from_plans.py  json_export.py  overlay_plots.py  utils.py
(+77 files in other folders)
